--- a/data/index.html
+++ b/data/index.html
@@ -11,11 +11,13 @@
 <body class="w3-animate-opacity">
 
     <div class="w3-card w3-blue w3-padding-small w3-center">
-        <h1>ESP32</h1>
+        <h1>Modern Simon Game - ESP8266</h1>
     </div>
 
     <div class="w3-margin w3-center w3-card w3-padding-24">
-        <h3 class="w3-padding">Turn On/Off the LED</h3>
+        <h3 class="w3-padding w3-xxlarge">Score / High Score</h3>
+        <p class="w3-xlarge"><span id="score">0</span> / <span id="highScore">0</span></p>
+        <h3 class="w3-padding w3-xxlarge">Buttons to control the LEDs</h3>
         <button onclick="blueButton()" class="w3-button w3-circle w3-blue w3-ripple w3-xxxlarge" style="width:40%;"><b>+</b></button> &nbsp; <br>
         <button onclick="greenButton()" class="w3-button w3-circle w3-green w3-ripple w3-xxxlarge" style="width:40%;"><b>+</b></button> &nbsp;
         <button onclick="redButton()" class="w3-button w3-circle w3-red w3-ripple w3-xxxlarge" style="width:40%;"><b>+</b></button> &nbsp;
